# clas6

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  DockerBasics.md  Dockerfile  Makefile.docker  README.md  bashrc  bashrc-g11  build.sh  clas6_function_singularity.sh  clas6_sim.sh  env-g11.sh  env.csh  env.sh  g11.Dockerfile
Docker/: Dockerfile  README.md  bashrc  env.sh
Docker/src/Hybrid-Baryons/: CMakeLists.txt  Dockerfile  Makefile  README.md
Docker/src/Hybrid-Baryons/2pi_event_generator/: CMakeLists.txt  Makefile  Makefile.docker  README  anti_rot.cxx  anti_rot.h  anti_rot_explanation  clipp.h  fermi_anti_rot.cxx  fermi_anti_rot.h  fermi_bonn.cxx  fermi_bonn.h  fermi_rot.cxx  fermi_rot.h  global.cxx  global.h  hist_def.cxx  hist_def.h  hist_fill.cxx  hist_fill.h  hist_write.cxx  hist_write.h  inp1  inp_file_read.cxx  inp_file_read.h  main_prog.cxx  out_file_close.cxx  out_file_close.h  out_file_fill.cxx  out_file_fill.h  out_file_open.cxx  out_file_open.h  radcorr.cxx  radcorr.h  read_fit_param_files.cxx  read_fit_param_files.h  read_xsect_files.cxx  read_xsect_files.h  rot.cxx  rot.h  (+1 more)
Docker/src/Hybrid-Baryons/2pi_event_generator/get_xsect/: get_xsect_14_18_lowq2_fit.cxx  get_xsect_14_18_lowq2_fit.h  get_xsect_25_30.cxx  get_xsect_25_30.h  get_xsect_fedotov.cxx  get_xsect_fedotov.h  get_xsect_gol2.cxx  get_xsect_gol2.h  get_xsect_golovach.cxx  get_xsect_golovach.h  get_xsect_near_threshold.cxx  get_xsect_near_threshold.h  get_xsect_q2_130_w_gt_18_lt_21.cxx  get_xsect_q2_130_w_gt_18_lt_21.h  get_xsect_q2_13_wgt_3.cxx  get_xsect_q2_13_wgt_3.h  get_xsect_rip_fed_join.cxx  get_xsect_rip_fed_join.h  get_xsect_ripani.cxx  get_xsect_ripani.h  get_xsect_scale_gol_18_25.cxx  get_xsect_scale_gol_18_25.h
Docker/src/Hybrid-Baryons/2pi_event_generator/interpol/: interpol.cxx  interpol.h  interpol_fedotov.cxx  interpol_fedotov.h  interpol_fedotov_thresh.cxx  interpol_fedotov_thresh.h  interpol_gol2.cxx  interpol_gol2.h  interpol_golovach.cxx  interpol_golovach.h  interpol_int.cxx  interpol_int.h  interpol_phot_wgt_3.cxx  interpol_phot_wgt_3.h  interpol_q2_13_wgt_3.cxx  interpol_q2_13_wgt_3.h  interpol_rip2.cxx  interpol_rip2.h  interpol_rip3.cxx  interpol_rip3.h
Hybrid-Baryons/2pi_event_generator/: Makefile  anti_rot.cxx  anti_rot.h  fermi_anti_rot.cxx  fermi_anti_rot.h  fermi_bonn.cxx  fermi_bonn.h  fermi_rot.cxx  fermi_rot.h  global.cxx  global.h  hist_def.cxx  hist_def.h  hist_fill.cxx  hist_fill.h  hist_write.cxx  hist_write.h  inp_file_read.cxx  inp_file_read.h  main_prog.cxx  out_file_close.cxx  out_file_close.h  out_file_fill.cxx  out_file_fill.h  out_file_open.cxx  out_file_open.h  radcorr.cxx  radcorr.h  read_fit_param_files.cxx  read_fit_param_files.h  read_xsect_files.cxx  read_xsect_files.h  rot.cxx  rot.h
clas/: Dockerfile
clas-software/: diff-clas
clas-software/analysis/: sconstruct
clas-software/build_system/: dependency.py  optimization.py  platform_string.py  progress.py
clas-software/detector/: sconstruct
clas-software/include/: PartUtil.h  csql.h  pid.h  run_control.inc  tmapman.h
clas-software/io/: sconstruct
clas-software/reconstruction/: sconstruct
clas/clas-software/: sconstruct
clas/clas-software/io/itape/: bos2itape.cc  config.cache  configure  configure.in  data.c  dataIO.c  disIO.c  esend.c  groups.cc  makeGroups.perl  mtime.c  tapeIO.c  tapeIoctl.c
clas/clas-software/simulation/ParticleSimulator/: CMakeLists.txt  CompositeParticle.cxx  Gamma.h  GammaLinkDef.h  Particle.cxx  Particle.h  ParticleData.h  README
clas/clas-software/simulation/ParticleSimulator/BOSClass/: CMakeLists.txt  HEAD.cxx  HEAD.h  HEADLinkDef.h  MCTK.h  MCTKLinkDef.h  MCVX.h  MCVXLinkDef.h  Makefile  TAGR.cxx  TAGR.h
clas/clas-software/simulation/ParticleSimulator/example/: CMakeLists.txt  Makefile  test.cxx
clas_root6/: Dockerfile
database/: Dockerfile  entry.sh  reset.sh
g11-software/: README.RHFC8
g11-software/Hv/: .cvsignore
g11-software/Map/: Makefile  map_get_float.c  map_get_int.c  map_syserror.c
g11-software/ana/: all_nt_book.F  book_ecpc_nt.F  book_mc_nt.F  book_seb_nt.F  book_st_nt.F  ec1_fill.F  ecpc_nt.inc  fill_ecpc_nt.F  fill_ecpc_nt.F.g11.org  fill_mc_nt.F  fill_mvrt_nt.F  fill_part_hist.F  fill_part_nt.F  fill_seb_ntn.F  fill_seb_ntn.F.org  fill_tbt_nt.F  histtcl_init.F  icr_nt.inc  mc_nt.inc  scrw_nt.inc  seb_fill.F  seb_nt.inc  seb_ntn.inc  tag_fill.F  trk_fill_raw.F  uconvert.c
g11-software/ana.g11.org/: Makefile  TBTnt.inc  book_ec_hist.F  book_icr_nt.F  book_part_hist.F  book_seb_ntn.F  dctrk_fill.F  fill_csql.F  fill_icr_nt.F  fill_seb_nt.F  fill_seb_ntn.F  seb_fill.F  tag_fill_erun.F  user_fill.F
g11-software/ana_pass00/: Makefile  PARTnt.inc  all_nt_book.F  all_nt_fill.F  book_ccrc_nt.F  book_part_hist.F  book_part_nt.F  book_seb_nt.F  book_seb_nt.F~  book_seb_ntn.F  book_tagr_nt.F  ccrc_nt.inc  csql.inc  dctrk_book.F  dctrk_fill.F  fill_csql.F  fill_mc_nt.F  fill_part_hist.F  fill_part_nt.F  fill_seb_nt.F  fill_seb_nt.F~  fill_seb_ntn.F  fill_tbt_nt.F~  histtcl.inc  histtcl_init.F  sc_bor.F  seb_nt.inc  seb_nt.inc~  tag_book.F  tag_fill.F  tag_fill_brun.F  tag_fill_erun.F
g11-software/ana_pass01/: .#book_part_hist.F.1.10  book_part_hist.F  book_tbt_nt.F  csql.inc  dctrk_book.F  dctrk_fill.F  fill_part_hist.F  fill_seb_nt.F  fill_seb_ntn.F  histtcl.inc~  histtcl_init.F  mc_nt.inc  sc_book.F  seb_nt.inc  tag_fill.F
g11-software/ana_pass02/: #Makefile#  all_nt_fill.F~  book_part_hist.F  fill_part_hist.F  fill_st_nt.F~  sccal.inc  tag_book.F
g11-software/ana_pass03/: book_part_hist.F  book_scrw_nt.F  book_st_nt.F  dctrk_fill.F  fill_csql.F  fill_ichb_nt.F  histtcl.inc  tag_book.F  tag_fill.F  tagr_nt.inc  trk_book_hbt.F  trk_book_raw.F  trk_fill_hbt.F
g11-software/ana_pass04/: #fill_part_hist.F#  TBTnt.inc~  all_nt_book.F  book_part_hist.F  book_part_nt.F  book_sc_nt.F  book_seb_nt.F  book_tbt_nt.F~  dctrk_book.F  fill_mvrt_nt.F  fill_part_hist.F  fill_part_nt.F  fill_sc_nt.F  fill_scrw_nt.F  seb_ntn.inc  tag_book.F  tag_fill.F  tag_fill_brun.F
rootv5/: Dockerfile
rootv6/: Dockerfile
(+3116 files in other folders)
